hornet-mainnet-k8s/hornet-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hornet-0
  labels:
    source: one-click-tangle
spec:
  type: NodePort
  externalTrafficPolicy: Local
  ports:
  - name: gossip
    port: 15600
    protocol: TCP
    targetPort: gossip
  - name: dashboard
    port: 8081
    protocol: TCP
    targetPort: dashboard
  - name: autopeering
    port: 14626
    protocol: UDP
    targetPort: autopeering
  selector:
    statefulset.kubernetes.io/pod-name: hornet-set-0
